// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#LinkablePhoneText 文字列だけの場合 改行ありの場合、そのままの文字列が表示されること 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#bbb",
      "fontSize": 16,
    }
  }
>
  恐れ入りますが、
窓口までお越し下さい
</Text>
`;

exports[`#LinkablePhoneText 文字列だけの場合 改行なしの場合、そのままの文字列が表示されること 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#bbb",
      "fontSize": 16,
    }
  }
>
  窓口までお越し下さい
</Text>
`;

exports[`#LinkablePhoneText 電話番号だけの場合 電話番号が一つの場合 0x-xxxx-xxxx形式の文字列がリンク化されること 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#bbb",
      "fontSize": 16,
    }
  }
>
  
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "color": "blue",
        "fontSize": 16,
        "textDecorationLine": "underline",
      }
    }
  >
    03-1234-1234
  </Text>
  
</Text>
`;

exports[`#LinkablePhoneText 電話番号だけの場合 電話番号が一つの場合 0xx-xxx-xxxx形式の文字列がリンク化されること 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#bbb",
      "fontSize": 16,
    }
  }
>
  
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "color": "blue",
        "fontSize": 16,
        "textDecorationLine": "underline",
      }
    }
  >
    045-123-1234
  </Text>
  
</Text>
`;

exports[`#LinkablePhoneText 電話番号だけの場合 電話番号が一つの場合 0xxx-xxx-xxx形式の文字列がリンク化されること 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#bbb",
      "fontSize": 16,
    }
  }
>
  
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "color": "blue",
        "fontSize": 16,
        "textDecorationLine": "underline",
      }
    }
  >
    0120-123-123
  </Text>
  
</Text>
`;

exports[`#LinkablePhoneText 電話番号だけの場合 電話番号が複数の場合 それぞれの電話番号がリンク化されること 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#bbb",
      "fontSize": 16,
    }
  }
>
  
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "color": "blue",
        "fontSize": 16,
        "textDecorationLine": "underline",
      }
    }
  >
    0120-123-123
  </Text>
  
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "color": "blue",
        "fontSize": 16,
        "textDecorationLine": "underline",
      }
    }
  >
    045-123-1234
  </Text>
  
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "color": "blue",
        "fontSize": 16,
        "textDecorationLine": "underline",
      }
    }
  >
    03-1234-1234
  </Text>
  
</Text>
`;

exports[`#LinkablePhoneText 電話番号と文字列を含む場合 電話番号が一つの場合 文の途中に電話番号がある場合、電話番号の文字列がリンク化されること 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#bbb",
      "fontSize": 16,
    }
  }
>
  お問い合わせは
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "color": "blue",
        "fontSize": 16,
        "textDecorationLine": "underline",
      }
    }
  >
    03-1234-1234
  </Text>
  へお願いします
</Text>
`;

exports[`#LinkablePhoneText 電話番号と文字列を含む場合 電話番号が一つの場合 電話番号から始まる場合、電話番号の文字列がリンク化されること 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#bbb",
      "fontSize": 16,
    }
  }
>
  
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "color": "blue",
        "fontSize": 16,
        "textDecorationLine": "underline",
      }
    }
  >
    03-1234-1234
  </Text>
  にご連絡ください
</Text>
`;

exports[`#LinkablePhoneText 電話番号と文字列を含む場合 電話番号が一つの場合 電話番号で終わる場合、電話番号の文字列がリンク化されること 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#bbb",
      "fontSize": 16,
    }
  }
>
  次の番号にご連絡ください
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "color": "blue",
        "fontSize": 16,
        "textDecorationLine": "underline",
      }
    }
  >
    03-1234-1234
  </Text>
  
</Text>
`;

exports[`#LinkablePhoneText 電話番号と文字列を含む場合 電話番号が複数の場合 それぞれの電話番号がリンク化されること 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Object {
      "color": "#bbb",
      "fontSize": 16,
    }
  }
>
  お問い合わせは
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "color": "blue",
        "fontSize": 16,
        "textDecorationLine": "underline",
      }
    }
  >
    0120-123-123
  </Text>
  または
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "color": "blue",
        "fontSize": 16,
        "textDecorationLine": "underline",
      }
    }
  >
    045-123-1234
  </Text>
  

  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "color": "blue",
        "fontSize": 16,
        "textDecorationLine": "underline",
      }
    }
  >
    03-1234-1234
  </Text>
  へお願いします
</Text>
`;
